--- a/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
@@ -9,6 +9,129 @@ description: Migrate from backend.run in qiskit-ibm-provider to using Qiskit Run
 This topic shows how to migrate code that implemented `IBMBackend.run()`
 by using `qiskit_ibm_provider` to use `qiskit_ibm_runtime`.
 
+## Save accounts
+
+Use the updated code to work save accounts.
+
+<Tabs>
+  <TabItem value="updated" label="Runtime primitives">
+The new syntax accepts credentials for
+Qiskit Runtime on IBM Cloud or IBM Quantum Platform. For more
+information on retrieving account credentials, see [Install and set up](../../start/install).
+
+``` python
+# IBM Quantum channel; set to default 
+
+QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQP_TOKEN>", overwrite=True, default=true)
+```
+
+Additionally, you can now name your saved credentials and load the credentials by name.
+
+
+``` python
+# Save different accounts for open and premium access
+
+QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQX_TOKEN>", instance="h1/g1/p1", name="premium")
+QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQX_TOKEN>", instance="h2/g2/p2", name="open")
+
+# Load the "open" credentials
+
+service = QiskitRuntimeService(name="open")
+```
+  </TabItem>
+
+  <TabItem value="legacy" label="backend.run">
+``` python
+IBMProvider.save_account(token='MY_API_TOKEN')
+```
+  </TabItem>
+</Tabs>
+
+
+## Load accounts
+
+Use the updated code to load accounts.
+
+<Tabs>
+  <TabItem value="updated" label="Runtime primitives">
+The new syntax combines the functionality from `load_account()` and
+`get_provider()` in one statement. The `channel` input parameter is
+optional. If multiple accounts have been saved in one device and no
+`channel` is provided, the default is `"ibm_cloud"`.
+
+``` python
+# To access saved credentials for the IBM cloud channel
+service = QiskitRuntimeService(channel="ibm_cloud")
+
+# To access saved credentials for the IBM quantum channel
+service = QiskitRuntimeService(channel="ibm_quantum")
+```
+  </TabItem>
+
+  <TabItem value="legacy" label="backend.run">
+``` python
+IBMProvider.load_account()
+```
+  </TabItem>
+</Tabs>
+
+
+## Instance selection (get a provider)
+
+Use the updated code to select a hub, group, and project.
+
+<Tabs>
+  <TabItem value="updated" label="Runtime primitives">
+The new syntax combines the functionality from `load_account()` and
+`get_provider()` in one statement. When using the `ibm_quantum` channel,
+the `hub`, `group`, and `project` are specified through the new
+`instance` keyword.
+
+``` python
+# To access saved credentials for the IBM quantum channel and select an instance
+service = QiskitRuntimeService(channel="ibm_quantum", instance="my_hub/my_group/my_project")
+```
+  </TabItem>
+
+  <TabItem value="legacy" label="backend.run">
+``` python
+provider = IBMProvider(instance="my_hub/my_group/my_project")
+
+```
+  </TabItem>
+</Tabs>
+
+## Get a backend 
+
+Use the updated code to specify a backend.
+
+<Tabs>
+  <TabItem value="updated" label="Runtime primitives">
+With Qiskit Runtime, you can also run in local testing mode as illustrated in [End-to-end examples.](qiskit-runtime-examples)
+
+``` python
+# You can specify the instance in service.backend() instead of initializing a new service
+backend = service.backend("ibm_backend", instance="h1/g1/p1")
+```
+If you don't know what backend you want to use, you can instead use code such as the following:
+
+```python
+from qiskit_ibm_runtime import QiskitRuntimeService
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=<num_qubits>)
+```
+  </TabItem>
+
+  <TabItem value="legacy" label="backend.run">
+``` python
+provider = ibm.get_provider(hub="h1", group="g1", project="p1")
+backend = provider.get_backend("ibm_backend")
+```
+  </TabItem>
+</Tabs>
+
+
 ## Example: Basic execution
 
 Change the import and run statements, instantiate the primitive, and make sure the input is modified to adhere to the backend's instruction set architecture (ISA).
@@ -41,7 +164,7 @@ print(f" > Counts: {result[0].data.meas.get_counts()}")
   <TabItem value="legacy" label="backend.run">
 ```python
 from qiskit_ibm_provider import IBMProvider
-from qiskit import *
+from qiskit import QuantumCircuit
 from qiskit.compiler import transpile, assemble
 
 circuit = QuantumCircuit(2, 2)
@@ -50,7 +173,7 @@ circuit.cx(0, 1)
 circuit.measure_all()
 
 provider = IBMProvider()
-backend = provider.get_backend("ibmq_qasm_simulator")
+backend = provider.get_backend("ibm_qasm_simulator")
 transpiled_circuit = transpile(circuit, backend=backend)
 job = backend.run(transpiled_circuit)
 print(f" > Counts: {job.result().get_counts()}")
@@ -66,6 +189,7 @@ print(f" > Counts: {job.result().get_counts()}")
   <TabItem value="Updated" label="Runtime primitives">
 ```python
 from qiskit_ibm_runtime import Session
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
 with Session(service=service, backend=backend) as session: 
     sampler = Sampler(session=session) 
