--- a/docs/api/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
@@ -21,19 +21,19 @@ The following table contains example access patterns in
 `qiskit.providers.ibmq.runtime` and their new form in
 `qiskit_ibm_runtime`:
 
-| class in qiskit-ibmq-provider                    | class in qiskit-ibm-runtime               | Notes                                                                                                                |
+| Class in qiskit-ibmq-provider                    | Class in qiskit-ibm-runtime               | Notes                                                                                                                |
 |--------------------------------------------------|-------------------------------------------|----------------------------------------------------------------------------------------------------------------------|
 | qiskit.providers.ibmq.runtime.IBMRuntimeService  | qiskit_ibm_runtime.QiskitRuntimeService   | IBMRuntimeService class was removed from qiskit-ibm-runtime 0.6 and replaced by the new class in qiskit-ibm-runtime. |
-| qiskit.providers.ibmq.runtime.RuntimeJob         | qiskit_ibm_runtime.RuntimeJob             | 
-| qiskit.providers.ibmq.runtime.RuntimeProgram     |                                           | This class was used for custom programs, which are no longer supported.
-| qiskit.providers.ibmq.runtime.UserMessenger      |                                           | This class was used for custom programs, which are no longer supported.                                |
-| qiskit.providers.ibmq.runtime.ProgramBackend     |                                           | This class was used for custom programs, which are no longer supported.                                |
-| qiskit.providers.ibmq.runtime.ResultDecoder      |                                           | This class was used for custom programs, which are no longer supported.                                |
-| qiskit.providers.ibmq.runtime.RuntimeEncoder     | qiskit_ibm_runtime.RuntimeEncoder         |
-| qiskit.providers.ibmq.runtime.RuntimeDecoder     | qiskit_ibm_runtime.RuntimeDecoder         |
-| qiskit.providers.ibmq.runtime.ParameterNamespace |                                           | This class was used for custom programs, which are no longer supported.
-| qiskit.providers.ibmq.runtime.RuntimeOptions     | qiskit_ibm_runtime.RuntimeOptions         |
+| qiskit.providers.ibmq.runtime.RuntimeEncoder     | qiskit_ibm_runtime.RuntimeEncoder         |                                                                                                                      |
+| qiskit.providers.ibmq.runtime.RuntimeDecoder     | qiskit_ibm_runtime.RuntimeDecoder         |                                                                                                                      |
 
+The following classes were used for custom programs, which are no longer supported.  Therefore, the classes are no longer supported:
+
+* qiskit.providers.ibmq.runtime.RuntimeProgram
+* qiskit.providers.ibmq.runtime.UserMessenger
+* qiskit.providers.ibmq.runtime.ProgramBackend
+* qiskit.providers.ibmq.runtime.ResultDecoder
+* qiskit.providers.ibmq.runtime.ParameterNamespace
 
 ## Import path
 
@@ -61,7 +61,7 @@ Use the updated code to work save accounts.
   <TabItem value="updated" label="Runtime primitives">
 The new syntax accepts credentials for
 Qiskit Runtime on IBM Cloud or IBM Quantum Platform. For more
-information on retrieving account credentials, see [Install and set up](../../start/install).
+information on retrieving account credentials, see [Select and set up an IBM Quantum channel](../../start/setup-channel).
 
 ``` python
 # IBM Quantum channel; set to default 
@@ -98,8 +98,7 @@ Use the updated code to load accounts.
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-The new syntax combines the functionality from `load_account()` and
-`get_provider()` in one statement. The `channel` input parameter is
+The `channel` input parameter is
 optional. If multiple accounts have been saved in one device and no
 `channel` is provided, the default is `"ibm_cloud"`.
 
@@ -150,8 +149,6 @@ Use the updated code to specify a backend.
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-With Qiskit Runtime, you can also run in local testing mode as illustrated in [End-to-end examples.](qiskit-runtime-examples)
-
 ``` python
 # You can specify the instance in service.backend() instead of initializing a new service
 backend = service.backend("ibm_backend", instance="h1/g1/p1")
@@ -164,6 +161,18 @@ from qiskit_ibm_runtime import QiskitRuntimeService
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=<num_qubits>)
 ```
+With Qiskit Runtime, you can also run in local testing mode.
+
+```python
+# Define a local backend
+from qiskit_ibm_runtime.fake_provider import FakeManilaV2
+backend = FakeManilaV2()
+
+# You could use an Aer simulator instead by using the following code:
+# from qiskit_aer import AerSimulator
+# backend = AerSimulator()
+```
+
   </TabItem>
 
   <TabItem value="legacy" label="backend.run">
