--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -18,12 +18,12 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | experiment_id       | N/A: Use job_tags instead.                                                                                            | ibmq-provider only                                                                                                                   |
 | header              | You can attach metadata to circuits. The same metadata is returned in the result metadata, under “circuit_metadata”.  |                                                                                                                                      |
 | shots               | Any of the following: <br></br>run([(…, shots)]) <br></br>run(…, shots=) <br></br>options.default_shots                                                |                                                                                                                                      |
-| memory              | Use result.data.meas.get_counts() to get counts and result.data.meas.get_bitstrings() to get per-shot measurements    | SamplerV2 is essentially always memory=True                                                                                          |
-| qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
-| meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
-| schedule_los        | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
+| memory              | Use result.data.<classical_register_name>.get_counts() to get counts and result.data.<classical_register_name>.get_bitstrings() to get per-shot measurements    |                                                                                          |
+| qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
+| meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
+| schedule_los        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | meas_level          | options.execution.meas_type                                                                                           | (meas_level, meas_return) → meas_type <br></br>0, * → not implemented <br></br>1, “avg” → “avg_kerneled” <br></br>1, “single” → “kerneled” <br></br>2, * → “classified”  |
-| meas_return         | options.execution.meas_type                                                                                           |                                                                                                                                      |
+| meas_return         | options.execution.meas_type                                                                                           | See above                                                                                                                   |
 | memory_slots        | N/A: This is automatically determined by the system.                                                                  | ibmq-provider only                                                                                                                   |
 | memory_slot_size    | N/A: This is automatically determined by the system.                                                                  | ibmq-provider only                                                                                                                   |
 | rep_time            | N/A: Use rep_delay instead.                                                                                           |                                                                                                                                      |
