--- a/docs/api/migration-guides/qiskit-runtime-use-case.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-use-case.mdx
@@ -132,15 +132,6 @@ qc.measure(0, 0)
 
 qc.draw()
 ```
-     ┌───┐     ┌──────────┐                      ┌───┐┌─┐
-q_0: ┤ H ├──■──┤ Rz(θ[0]) ├───────────────────■──┤ H ├┤M├
-     └───┘┌─┴─┐└──────────┘┌──────────┐     ┌─┴─┐└───┘└╥┘
-q_1: ─────┤ X ├─────■──────┤ Rz(θ[1]) ├──■──┤ X ├──────╫─
-          └───┘   ┌─┴─┐    ├──────────┤┌─┴─┐└───┘      ║ 
-q_2: ─────────────┤ X ├────┤ Rz(θ[2]) ├┤ X ├───────────╫─
-                  └───┘    └──────────┘└───┘           ║ 
-c: 1/══════════════════════════════════════════════════╩═
-                                                       0 
 
 Assign the following parameter values to the circuit:
 
@@ -151,7 +142,7 @@ theta_values = [np.pi/2, np.pi/2, np.pi/2]
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-Qiskit Runtime V2 primitives support only circuits that adhere to the Instruction Set Architecture (ISA) of a particular backend, so we must transform the circuits. 
+Only circuits that adhere to the Instruction Set Architecture (ISA) of a specific backend are accepted, so we must transform the circuits. 
 
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
@@ -176,7 +167,7 @@ efficiently. Moreover, only the updated parameters are transferred to
 the cloud, saving additional bandwidth.
 
 <Admonition type="note">
-You need the classical register name to get the results.  By default, it is named `meas` when you use `measure_all()`.  However, as shown in the previous image, the classical register name for this example is `c`.  You can also find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
+You need the classical register name to get the results.  By default, it is named `meas` when you use `measure_all()`.  However, the classical register name for this example is `c`.  You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
 </Admonition>
 
 ``` python
